# projetbourse

./: .env.example  .gitignore  BUILD_AND_DISTRIBUTE.md  INSTRUCTIONS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
bloomberg-terminal/: .env.example  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
bloomberg-terminal/src/: App.tsx  index.css
bloomberg-terminal/src-tauri/: Cargo.toml  tauri.conf.json
bloomberg-terminal/src-tauri/src/: main.rs
bloomberg-terminal/src/components/: Heatmap.tsx  Sparkline.tsx  (+2 more)
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs
src/components/: CandleChart.tsx  ChangeCell.tsx  ErrorBoundary.tsx  ExportButton.tsx  Loading.tsx  SignalChip.tsx  Sparkline.tsx  StatusBar.tsx  TickerTape.tsx
src/hooks/: useApiKeys.ts  useConnectionState.ts  useDataOrchestrator.ts  useDataRefresh.ts  useTauriDb.ts  useWebSocket.ts
src/screens/: Macro.tsx  MacroCalendar.tsx  Market.tsx  MarketActivity.tsx  News.tsx  NewsIntelligence.tsx  Portfolio.tsx  Screener.tsx  Settings.tsx
src/services/: alphaVantageService.ts  apiThrottler.ts  dataOrchestrator.test.ts  dataOrchestrator.ts  finnhubService.ts  macroService.ts  mockData.ts  mockDataService.ts  polygonService.ts  types.ts  yahooFinanceService.ts
src/store/: index.ts  useAlertStore.ts  useTerminalStore.ts
src/types/: index.ts
src/utils/: finance.ts  financialCalculations.test.ts  financialCalculations.ts  marketHours.ts  throttle.ts
(+18 files in other folders)
