[package]
name = "bloomberg-terminal"
version = "1.0.0"
description = "Bloomberg-like financial terminal"
authors = ["you"]
license = ""
repository = ""
default-run = "bloomberg-terminal"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri    = { version = "1.6", features = ["shell-open", "sql-all"] }
serde    = { version = "1",   features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["sqlite"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono   = { version = "0.4", features = ["serde"] }
tokio    = { version = "1", features = ["full"] }

[features]
default        = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
